// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Separator /> matches snapshot 1`] = `
<body>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div>
    <button
      aria-controls="radix-:r1:"
      aria-expanded="true"
      aria-haspopup="menu"
      data-state="open"
      id="radix-:r0:"
      type="button"
    >
      Trigger
    </button>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0, -200%); min-width: max-content; --radix-popper-transform-origin:  ;"
  >
    <div
      aria-labelledby="radix-:r0:"
      aria-orientation="vertical"
      class="content md"
      data-align="center"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="bottom"
      data-state="open"
      dir="ltr"
      id="radix-:r1:"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); animation: none;"
      tabindex="-1"
    >
      <div
        aria-orientation="horizontal"
        class="separator"
        role="separator"
      />
      <span
        style="position: absolute; top: 0px; transform-origin: center 0; transform: rotate(180deg); visibility: hidden;"
      >
        <svg
          class="arrow"
          height="5"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="10"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
    </div>
  </div>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`<Separator /> renders with inverted margin 1`] = `
<body>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div>
    <button
      aria-controls="radix-:r3:"
      aria-expanded="true"
      aria-haspopup="menu"
      data-state="open"
      id="radix-:r2:"
      type="button"
    >
      Trigger
    </button>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0, -200%); min-width: max-content; --radix-popper-transform-origin:  ;"
  >
    <div
      aria-labelledby="radix-:r2:"
      aria-orientation="vertical"
      class="content md"
      data-align="center"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="bottom"
      data-state="open"
      dir="ltr"
      id="radix-:r3:"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); animation: none;"
      tabindex="-1"
    >
      <div
        aria-orientation="horizontal"
        class="separator invert-margin"
        role="separator"
      />
      <span
        style="position: absolute; top: 0px; transform-origin: center 0; transform: rotate(180deg); visibility: hidden;"
      >
        <svg
          class="arrow"
          height="5"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="10"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
    </div>
  </div>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
